Actualizacion de home.html a index.html

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,7 +32,7 @@
 
         <!--Aquí hago la barra de navegación y poniendo un enlace en la imagen para que siempre te lleve a HOME al clicar.-->
         <nav class="barra-navegacion">
-            <a href="Home.html" ><img src="./img/saiior.png" class="icono-empresa" > </a>
+            <a href="index.html" ><img src="./img/saiior.png" class="icono-empresa" > </a>
 
             
 
@@ -41,7 +41,7 @@
         <!--Creo aquí una separación para que sea mas facil controlar la imagen y diferenciarla de
         los textos con enlaces que hay que situar a la derecha-->    
             <div class="barra-menu">
-                <a href="Home.html"><h3>HOME</h3></a>
+                <a href="index.html"><h3>HOME</h3></a>
                 <a href="Pricing_box.html"><h3>PRICING BOX</h3></a>
                 <a href="Portfolio.html"><h3>PORTFOLIO</h3></a>
                 <a href= "#"></a><h3>CONTACT</h3></div></a>
